--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -227,6 +227,18 @@ foreach($this->membresFiles as $val => $membre){
                                                                     $col['VALEUR'] = 'Non';
                                                                 }
                                                             }
+                                                            else{
+                                                                // Définition du libellé pour les dates 
+                                                                if ('Date' === $champ['TYPE']) {
+                                                                    if (!empty($champ['VALEUR'])) {
+                                                                        $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                                        $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                                    }else{
+                                                                        $champ['VALEUR']= "";
+                                                                    }
+                                                                }
+                                                            }
+                                                            
 
                                                             addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                                             $idxCol++;
@@ -246,6 +258,18 @@ foreach($this->membresFiles as $val => $membre){
                                                             $champFils['VALEUR'] = 'Non';
                                                         }
                                                     }
+                                                    else{
+                                                        // Définition du libellé pour les dates 
+                                                        if ('Date' === $champ['TYPE']) {
+                                                            if (!empty($champ['VALEUR'])) {
+                                                                $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                                $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                            }else{
+                                                                $champ['VALEUR']= "";
+                                                            }
+                                                        }
+                                                    }
+                                                    
                                                     addChamp(
                                                         $dossInfos,
                                                         $serviceUtils->getFullFusionName(
@@ -269,6 +293,18 @@ foreach($this->membresFiles as $val => $membre){
                                                     $champ['VALEUR'] = 'Non';
                                                 }
                                             }
+                                            else{
+                                                // Définition du libellé pour les dates 
+                                                if ('Date' === $champ['TYPE']) {
+                                                    if (!empty($champ['VALEUR'])) {
+                                                        $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                        $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                    }else{
+                                                        $champ['VALEUR']= "";
+                                                    }
+                                                }
+                                            }
+                                            
                                             addChamp(
                                                 $dossInfos,
                                                 $serviceUtils->getFullFusionName(
@@ -281,6 +317,7 @@ foreach($this->membresFiles as $val => $membre){
                                                 $champ['VALEUR']
                                             );
                                         }
+                                        
                                     }
                                 }
                             }
