--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -253,6 +253,17 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                             $col['VALEUR'] = 'Non';
                                                         }
                                                     }
+                                                    else{
+                                                        // Définition du libellé pour les dates 
+                                                        if ('Date' === $champ['TYPE']) {
+                                                            if (!empty($champ['VALEUR'])) {
+                                                                $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                                $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                            }else{
+                                                                $champ['VALEUR']= "";
+                                                            }
+                                                        }
+                                                    }
 
                                                     addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
                                                     $idxCol++;
@@ -270,6 +281,17 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                     $champFils['VALEUR'] = 'Oui';
                                                 } else {
                                                     $champFils['VALEUR'] = 'Non';
+                                                }
+                                            }
+                                            else{
+                                                // Définition du libellé pour les dates 
+                                                if ('Date' === $champ['TYPE']) {
+                                                    if (!empty($champ['VALEUR'])) {
+                                                        $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                        $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                    }else{
+                                                        $champ['VALEUR']= "";
+                                                    }
                                                 }
                                             }
                                             addChamp(
@@ -295,6 +317,17 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                             $champ['VALEUR'] = 'Non';
                                         }
                                     }
+                                    else{
+                                        // Définition du libellé pour les dates 
+                                        if ('Date' === $champ['TYPE']) {
+                                            if (!empty($champ['VALEUR'])) {
+                                                $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
+                                                $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                            }else{
+                                                $champ['VALEUR']= "";
+                                            }
+                                        }
+                                    }
                                     addChamp(
                                         $dossInfos,
                                         $serviceUtils->getFullFusionName(
@@ -307,6 +340,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                         $champ['VALEUR']
                                     );
                                 }
+                                
                             }
                         }
                     }
