Les balises n'étaient pas remplacées si aucune ligne n'était renseignée

--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -197,7 +197,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                         addChamp($avisDerogations, 'analyse_de_risque', '');
                         addChamp($avisDerogations, 'avis', '');
                         addChamp($avisDerogations, 'identifiantdossierleve', '');
-                        addChamp($avisDerogations, 'affichagehistorique', '');
+                        addChamp($avisDerogations, 'date', '');
 
                         $avisDerogations->merge();
                     }
@@ -242,23 +242,33 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                         } catch (Exception $e) {}
 
                                         if (isset($segmentTableau)) {
-                                            foreach ($champ['FILS']['VALEURS'] as $ligne) {
-                                                $idxCol = 0;
+                                            if (count($champ['FILS']['VALEURS']) === 0) {
+                                                foreach ($champ['FILS'] as $index => $fils) {
+                                                    if(is_int($index)) {
+                                                        addChamp($segmentTableau, sprintf('valeur%d', $index), '');
+                                                    }
+                                                }
+                                                
+                                                $segmentTableau->merge();
+                                            } else {
+                                                foreach ($champ['FILS']['VALEURS'] as $ligne) {
+                                                    $idxCol = 0;
 
-                                                foreach ($ligne as $col) {
-                                                    if ('Case à cocher' === $col['TYPE']) {
-                                                        if (true === boolval($col['VALEUR'])) {
-                                                            $col['VALEUR'] = 'Oui';
-                                                        } else {
-                                                            $col['VALEUR'] = 'Non';
+                                                    foreach ($ligne as $col) {
+                                                        if ('Case à cocher' === $col['TYPE']) {
+                                                            if (true === boolval($col['VALEUR'])) {
+                                                                $col['VALEUR'] = 'Oui';
+                                                            } else {
+                                                                $col['VALEUR'] = 'Non';
+                                                            }
                                                         }
+
+                                                        addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
+                                                        $idxCol++;
                                                     }
 
-                                                    addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
-                                                    $idxCol++;
+                                                    $segmentTableau->merge();
                                                 }
-
-                                                $segmentTableau->merge();
                                             }
                                         }
 
