--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -168,7 +168,7 @@ foreach($this->membresFiles as $val => $membre){
                                 addChamp($avisDerogations, 'analyse_de_risque', '');
                                 addChamp($avisDerogations, 'avis', '');
                                 addChamp($avisDerogations, 'identifiantdossierleve', '');
-                                addChamp($avisDerogations, 'affichagehistorique', '');
+                                addChamp($avisDerogations, 'date', '');
 
                                 $avisDerogations->merge();
                             }
@@ -216,23 +216,33 @@ foreach($this->membresFiles as $val => $membre){
                                                 } catch (Exception $e) {}
 
                                                 if (isset($segmentTableau)) {
-                                                    foreach ($champ['FILS']['VALEURS'] as $ligne) {
-                                                        $idxCol = 0;
+                                                    if (count($champ['FILS']['VALEURS']) === 0) {
+                                                        foreach ($champ['FILS'] as $index => $fils) {
+                                                            if(is_int($index)) {
+                                                                addChamp($segmentTableau, sprintf('valeur%d', $index), '');
+                                                            }
+                                                        }
+                                                        
+                                                        $segmentTableau->merge();
+                                                    } else {
+                                                        foreach ($champ['FILS']['VALEURS'] as $ligne) {
+                                                            $idxCol = 0;
 
-                                                        foreach ($ligne as $col) {
-                                                            if ('Case à cocher' === $col['TYPE']) {
-                                                                if (true === boolval($col['VALEUR'])) {
-                                                                    $col['VALEUR'] = 'Oui';
-                                                                } else {
-                                                                    $col['VALEUR'] = 'Non';
+                                                            foreach ($ligne as $col) {
+                                                                if ('Case à cocher' === $col['TYPE']) {
+                                                                    if (true === boolval($col['VALEUR'])) {
+                                                                        $col['VALEUR'] = 'Oui';
+                                                                    } else {
+                                                                        $col['VALEUR'] = 'Non';
+                                                                    }
                                                                 }
+
+                                                                addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
+                                                                $idxCol++;
                                                             }
 
-                                                            addChamp($segmentTableau, sprintf('valeur%d', $idxCol), $col['VALEUR'] ?? '');
-                                                            $idxCol++;
+                                                            $segmentTableau->merge();
                                                         }
-
-                                                        $segmentTableau->merge();
                                                     }
                                                 }
 
