--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -119,7 +119,7 @@
     <?php break;
     // Date
     case 7: if ($this->canWrite) { ?>
-        <div class='right form span9' style>
+        <div class="colDate" >
             <input type='text' class ='date' id='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' <?= $this->canWrite ? '' : 'disabled' ?> value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'>
             <button type="button" class='today btn'>
                 <i class='icon-calendar' aria-hidden='true'></i>
