--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -264,12 +264,12 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                                         }
                                                         else{
                                                             // Définition du libellé pour les dates 
-                                                            if ('Date' === $champ['TYPE']) {
-                                                                if (!empty($champ['VALEUR'])) {
-                                                                    $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
-                                                                    $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                            if ('Date' === $col['TYPE']) {
+                                                                if ($col['VALEUR'] !== null) {
+                                                                    $zendDate = new Zend_Date($col['VALEUR'], 'dd/MM/yyyy');
+                                                                    $col['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
                                                                 }else{
-                                                                    $champ['VALEUR']= "";
+                                                                    $col['VALEUR']= "";
                                                                 }
                                                             }
                                                         }
@@ -296,12 +296,12 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                                             }
                                             else{
                                                 // Définition du libellé pour les dates 
-                                                if ('Date' === $champ['TYPE']) {
-                                                    if (!empty($champ['VALEUR'])) {
-                                                        $zendDate = new Zend_Date($champ['VALEUR'], 'dd/MM/yyyy');
-                                                        $champ['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
+                                                if ('Date' === $champFils['TYPE']) {
+                                                    if (!empty($champFils['VALEUR'])) {
+                                                        $zendDate = new Zend_Date($champFils['VALEUR'], 'dd/MM/yyyy');
+                                                        $champFils['VALEUR'] = $zendDate->get(Zend_Date::DAY . ' ' . Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR);
                                                     }else{
-                                                        $champ['VALEUR']= "";
+                                                        $champFils['VALEUR']= "";
                                                     }
                                                 }
                                             }
