--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -162,8 +162,8 @@ endif ?>
         <div style='margin:10px; line-height: 20px;' id='infosEtablissement'>
             <?php if($this->enteteEtab) : ?>
                 Etablissement(s) concerné(s) :
-                <a  
-                    href= <?= '/etablissement/descriptif/id/'.$this->enteteEtab['ID_ETABLISSEMENT']?>
+                <a
+                    href=<?= '/etablissement/descriptif/id/'.$this->enteteEtab['ID_ETABLISSEMENT'].'?hideButton=true' ?>
                     data-target='#modal-desc'
                     data-toggle='modal'
                     id='descEtab'
