Réutilisation de l'action existante

--- a/application/views/scripts/etablissement/descriptif.phtml
+++ b/application/views/scripts/etablissement/descriptif.phtml
@@ -1,5 +1,5 @@
 <?php
-    if (intval(getenv('PREVARISC_DESCRIPTIF_PERSONNALISE')) === 1) {
+    if (intval(getenv('PREVARISC_DESCRIPTIF_PERSONNALISE')) === 1 && false === $this->displayOriginal) {
         echo $this->render('etablissement/descriptif/descriptif-personnalise.phtml');
     } else {
         echo $this->render('etablissement/descriptif/descriptif-original.phtml');
