--- a/public/css/formulaire/descriptif.css
+++ b/public/css/formulaire/descriptif.css
@@ -1,7 +1,13 @@
-#descriptif-personnalise a {
+#descriptif-personnalise .descriptif-personnalise_rubriques-infos a {
     font-weight: 600;
     text-decoration: underline;
     margin-left: 1rem;
+}
+
+.descriptif-personnalise--header {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .form-horizontal .control-group {
